# persuasion-dojo

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-voiceprint.txt  requirements.txt
backend/: audio.py  audio_tcp_server.py  calendar_service.py  coaching_bullets.py  coaching_engine.py  coaching_memory.py  database.py  elm_detector.py  fingerprint.py  hybrid_transcription.py  identity.py  linkedin.py  main.py  models.py  moonshine_transcription.py  pre_seeding.py  profiler.py  retro_import.py  scoring.py  seed_tips.py  self_assessment.py  signals.py  sparring.py  speaker_embeddings.py  speaker_resolver.py  team_sync.py  transcriber_protocol.py  transcript_parser.py  transcription.py  turn_tracker.py
data/: seed_tips.json
deepgram_emulator/: __init__.py  fixtures.py  server.py
scripts/: build-mdm-profile.sh  convergence_spike.py  convert_granola.py  real_world_gate.py  sample_annotation.json  sample_transcript.json  spike_results.json  voiceprint_spike.py
tests/: conftest.py  test_ace_convergence.py  test_audio.py  test_audio_buffer.py  test_audio_capture.py  test_audio_lifecycle.py  test_audio_tcp_integration.py  test_audio_tcp_server.py  test_bkt.py  test_calendar_auto_seed.py  test_calendar_service.py  test_coaching_bullets.py  test_coaching_engine.py  test_coaching_memory.py  test_coaching_quality.py  test_database.py  test_elm_detector.py  test_fifo_streaming.py  test_fingerprint.py  test_hybrid_transcription.py  test_main.py  (+20 more)
(+174 files in other folders)
